Em-6780 fix codesmells (#2983)